[package]
name = "bevy_jam_3_game"
version = "0.1.0"
publish = false
authors = ["Doonv"]
edition = "2021"
license = "ARR"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/dynamic_linking"]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.12", default-features = true }
rand = "0.8.3"
webbrowser = { version = "0.8", features = ["hardened"] }
bevy_dev_console = { path = "../bevy_dev_console" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28.7", default-features = false }
image = { version = "0.24", default-features = false }
bevy_xpbd_3d = "0.3.2"
bevy_toon_shader = "0.3.0"
bevy_atmosphere = "0.8.1"
bevy_tweening = "0.9.0"

[build-dependencies]
embed-resource = "1.4"

[profile.optimized]
debug = true
debug-assertions = true
overflow-checks = true
opt-level = 3
incremental = false
lto = true
codegen-units = 1
inherits = "dev"
